Правки по заданию 16